[package]
name = "fuzzy-search-webapp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-util = "0.7"
async-process = "2.0"
futures = "0.3"
tower = "0.4"
tokio-stream = { version = "0.1", features = ["sync"] }
