[package]
name = "fuzzy-search-webapp"
version = "0.1.0"
edition = "2021"
description = "A fast fuzzy file search web application"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-util = "0.7"
futures = "0.3"
tower = "0.4"
tokio-stream = { version = "0.1", features = ["sync"] }
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
fuzzy-matcher = "0.3"
directories = "5.0"
dirs = "5.0"
md5 = "0.7.0"
